--- a/property-1.0.0/camp-information.html
+++ b/property-1.0.0/camp-information.html
@@ -226,6 +226,87 @@
                     
                     <button class="btn btn-primary py-2 px-4.5" style="font-size: 14px;margin-top: 10px;margin-bottom: 30px;margin-right: 50px;">
                       <a href="property-single.html" style="color: #fff;">參加 !</a></button>
+                      <dialog id="infoModal">
+                        <div class="box">
+                        <h4 style="font-weight:bold;">參加</h4>
+                        <i id="close" class="fa-solid fa-circle-xmark fa-xl" style="color:#D0D0D0;"></i>
+                      </div>
+                        <h6 style="color: #9D9D9D ">參加活動蒐集勳章！<h6>
+                        <br>
+                        <input type="text" value="聯絡電話" style="background-color: #F0F0F0; border-style: none; color:	#9D9D9D; width: 420px; height: 50px; border-radius: 30px;padding: 20px;">
+                        <br><br>
+                        <input type="email" value="email" style="background-color: #F0F0F0; border-style: none; color: 		#9D9D9D; width: 420px; height: 50px; border-radius: 30px;padding: 20px;">
+                        <br><br>
+                        <textarea rows="4" style="background-color: #F0F0F0; border-style: none; color: 		#9D9D9D; width: 420px; border-radius: 10px;padding: 20px;">備註/建議</textarea>
+                        <br>
+                        <h6 style="font-weight:bold;">可提供裝備</h6> 
+                        <input type="checkbox" style="color: #F0F0F0;">&nbsp;&nbsp;<span style="font-weight:bold;">帳篷</span>&nbsp;&nbsp;
+                        <select style="background-color:#F0F0F0 ; border-radius: 10px; border-style: none; width: 60px; color: 	#9D9D9D; text-align: center;">
+                          <option>1</option>
+                          <option>2</option>
+                          <option>3</option>
+                      </select>
+                      &nbsp;&nbsp;&nbsp;
+                      <input type="checkbox" style="color: #F0F0F0;">&nbsp;&nbsp;<span style="font-weight:bold;">帳篷</span>&nbsp;&nbsp;
+                        <select style="background-color:#F0F0F0 ; border-radius: 10px; border-style: none; width: 60px; color: 	#9D9D9D; text-align: center;">
+                          <option>1</option>
+                          <option>2</option>
+                          <option>3</option>
+                      </select>
+                      &nbsp;&nbsp;&nbsp;
+                      <input type="checkbox" style="color: #F0F0F0;">&nbsp;&nbsp;<span style="font-weight:bold;">帳篷</span>&nbsp;&nbsp;
+                        <select style="background-color:#F0F0F0 ; border-radius: 10px; border-style: none; width: 60px; color: 	#9D9D9D; text-align: center;">
+                          <option>1</option>
+                          <option>2</option>
+                          <option>3</option>
+                      </select>
+                      <br><br>
+                      <input type="checkbox" style="color: #F0F0F0;">&nbsp;&nbsp;<span style="font-weight:bold;">睡袋</span>&nbsp;&nbsp;
+                        <select style="background-color:#F0F0F0 ; border-radius: 10px; border-style: none; width: 60px; color: 	#9D9D9D; text-align: center;">
+                          <option>1</option>
+                          <option>2</option>
+                          <option>3</option>
+                      </select>
+                      &nbsp;&nbsp;&nbsp;
+                      <input type="checkbox" style="color: #F0F0F0;">&nbsp;&nbsp;<span style="font-weight:bold;">睡袋</span>&nbsp;&nbsp;
+                        <select style="background-color:#F0F0F0 ; border-radius: 10px; border-style: none; width: 60px; color: 	#9D9D9D; text-align: center;">
+                          <option>1</option>
+                          <option>2</option>
+                          <option>3</option>
+                      </select>
+                      &nbsp;&nbsp;&nbsp;
+                      <input type="checkbox" style="color: #F0F0F0;">&nbsp;&nbsp;<span style="font-weight:bold;">睡袋</span>&nbsp;&nbsp;
+                        <select style="background-color:#F0F0F0 ; border-radius: 10px; border-style: none; width: 60px; color: 	#9D9D9D; text-align: center;">
+                          <option>1</option>
+                          <option>2</option>
+                          <option>3</option>
+                      </select>
+                      <br><br>
+                      <input type="checkbox" style="color: #F0F0F0;">&nbsp;&nbsp;<span style="font-weight:bold;">熱水壺</span>&nbsp;&nbsp;
+                        <select style="background-color:#F0F0F0 ; border-radius: 10px; border-style: none; width: 50px; color: 	#9D9D9D; text-align: center;">
+                          <option>1</option>
+                          <option>2</option>
+                          <option>3</option>
+                      </select>
+                      &nbsp;&nbsp;
+                      <input type="checkbox" style="color: #F0F0F0;">&nbsp;&nbsp;<span style="font-weight:bold;">瓦斯爐</span>&nbsp;&nbsp;
+                        <select style="background-color:#F0F0F0 ; border-radius: 10px; border-style: none; width: 50px; color: 	#9D9D9D; text-align: center;">
+                          <option>1</option>
+                          <option>2</option>
+                          <option>3</option>
+                      </select>
+                      &nbsp;&nbsp;
+                      <input type="checkbox" style="color: #F0F0F0;">&nbsp;&nbsp;<span style="font-weight:bold;">鍋子</span>&nbsp;&nbsp;
+                        <select style="background-color:#F0F0F0 ; border-radius: 10px; border-style: none; width: 60px; color: 	#9D9D9D; text-align: center;">
+                          <option>1</option>
+                          <option>2</option>
+                          <option>3</option>
+                      </select>
+                      <br><br>
+                      <textarea rows="2" style="background-color: #F0F0F0; border-style: none; color: 		#9D9D9D; width: 420px; border-radius: 10px;padding: 20px;">其他</textarea>
+                      <br>
+                      <button style="width: 100px; height: 30px; background-color: 	#005757;color: white; margin-left: 320px; border:none; border-radius: 30px;">提交</button>
+                    </dialog>
                 </div>
               </div>
             </div>
