--- a/deluxe-master/rooms-single.html
+++ b/deluxe-master/rooms-single.html
@@ -264,7 +264,9 @@
                      <span>
                      <div class="card-icon-footer"><p>100 留言</p>
                      <p>30 分享</p>
-                    <i class="fa-regular fa-eye"></i><p>1,098</p></div>
+                    <i class="fa-regular fa-eye"></i>
+                    <p>1,098</p>
+                  </div>
                      </span>
                     </footer>
                   </div>
@@ -287,7 +289,9 @@
                          <div class="card-icon-footer">
                           <p>100 留言</p>
                          <p>30 分享</p>
-                        <i class="fa-regular fa-eye"></i><p>1,098</p></div>
+                        <i class="fa-regular fa-eye"></i>
+                        <p>1,098</p>
+                      </div>
                          </span>
                         </footer>
                       </div>
