--- a/property-1.0.0/article-manage.html
+++ b/property-1.0.0/article-manage.html
@@ -166,7 +166,9 @@
                          <a href="category.html">Film</a>
                         </div>
                         <div class="time">December 26, 2016</div>
+                        <div class="thumb" data-toggle="modal" data-target="#infoModal">
                         <i class="fa-solid fa-circle-exclamation fa-2xl" style="color: #CE0000; margin-left: 670px;"></i>
+                        </div>
                       </div>
                       <h1><a href="single.html">推薦給想露營卻沒有經驗的你！</a></h1>
                       <p>
@@ -194,7 +196,10 @@
                          <a href="category.html">Film</a>
                         </div>
                         <div class="time">December 26, 2016</div>
+                        <div class="thumb" data-toggle="modal" data-target="#infoModal">
+
                         <i class="fa-solid fa-circle-exclamation fa-2xl" style="color: #CE0000; margin-left: 670px;"></i>
+                      </div>
                       </div>
                       <h1><a href="single.html">推薦給想露營卻沒有經驗的你！</a></h1>
                       <p>
@@ -222,8 +227,10 @@
                          <a href="category.html">Film</a>
                         </div>
                         <div class="time">December 26, 2016</div>
+                        <div class="thumb" data-toggle="modal" data-target="#infoModal">
                         <i class="fa-solid fa-circle-exclamation fa-2xl" style="color: #CE0000; margin-left: 670px;"></i>
                       </div>
+                    </div>
                       <h1><a href="single.html">推薦給想露營卻沒有經驗的你！</a></h1>
                       <p>
                         最近露營潮興起，讓許多想旅行的人，開始選擇懶人露營，
@@ -250,8 +257,10 @@
                          <a href="category.html">Film</a>
                         </div>
                         <div class="time">December 26, 2016</div>
+                        <div class="thumb" data-toggle="modal" data-target="#infoModal">
                         <i class="fa-solid fa-circle-exclamation fa-2xl" style="color: #CE0000; margin-left: 670px;"></i>
                       </div>
+                    </div>
                       <h1><a href="single.html">推薦給想露營卻沒有經驗的你！</a></h1>
                       <p>
                         最近露營潮興起，讓許多想旅行的人，開始選擇懶人露營，
