--- a/property-1.0.0/camp-information.html
+++ b/property-1.0.0/camp-information.html
@@ -148,7 +148,7 @@
         </span>
         </div>
         <div class="input-group" style="display: flex; justify-content: space-between;">
-        <button type="button" class="gray-lg">
+        <button type="button" class="gray-lg" data-toggle="modal" data-target="#exampleModalCenter">
           <img src="images/person_4.jpg" alt="Image description" style="border-radius: 50%; width: 15%;">
           <label style="font-size: 14px; margin-bottom: 0px;margin-left: -16px; font-weight: 600; ">yizz</label>
           <div class="verticle-line"></div>
@@ -678,6 +678,42 @@
     </div>
       </div>
   </div>
+  <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-body">
+          <span style="display: flex;">
+            <h6>徽章進度</h6>
+            <span-i style="margin-left: 20px;">
+            <i class="fa-solid fa-fire" style="color:#B02626"></i>
+            <i class="fa-solid fa-compass" style="color:rgba(0, 0, 0, 0.16)"></i>
+            <i class="fa-solid fa-binoculars" style="color:rgba(0, 0, 0, 0.16)"></i>
+            <i class="fa-solid fa-campground" style="color:rgba(0, 0, 0, 0.16)"></i>
+            </span-i>
+            </span>
+            <div style="display: flex; justify-content: space-between;">
+              <span style="display: flex;">
+              <p>已參加活動</p>
+              <p>2</p>
+              <p>次</p>
+              </span>
+              <span style="display: flex;">
+              <p >差</p>
+              <p>1</p>
+              <p>次升級</p>
+            </span></div>
+            
+              
+          </span>
+          <div class="progress" style="height:0.7rem; border-radius:35px;">
+          <div class="progress-bar" role="progressbar" style="width: 66%;
+                      background-color:#8D703B;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
 
       <div class="row mt-5">
         <div class="col-12 text-center">
@@ -705,6 +741,7 @@
       </div>
     </div>
     <!-- /.container -->
+
   </div>
   <!-- /.site-footer -->
 
