--- a/deluxe-master/article.html
+++ b/deluxe-master/article.html
@@ -120,13 +120,15 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-4 sidebar ftco-animate">
-            <div class="sidebar-box">
-              <form action="#" class="search-form">
-                <div class="form-group">
-                  <span class="icon fa fa-search"></span>
-                  <input type="text" class="form-control" placeholder="Type a keyword and hit enter">
-                </div>
-              </form>
+            <div class="input-group " style="width: 30%; margin-left:72px; justify-content: flex-end">
+              <div id="navbar-search-autocomplete" class="form-outline">
+                <input type="search" id="form1" class="form-control" style="height: 40px; border-radius: 35px;"/>
+                
+              </div>
+              &nbsp;
+              <button type="button" class="button-search">
+                <i class="fas fa-search"></i>
+              </button>
             </div>
             <div class="sidebar-box ftco-animate">
               <div class="categories">
