--- a/property-1.0.0/index.html
+++ b/property-1.0.0/index.html
@@ -853,77 +853,45 @@
   <div class="site-footer">
     <div class="container">
       <div class="row">
-        <div class="col-lg-4">
+        
+         <!-- /.col-lg-4 -->
+        <div class="col-lg-5">
           <div class="widget">
-            <h3>Contact</h3>
-            <address>43 Raymouth Rd. Baltemoer, London 3910</address>
+            <h3>聯絡資訊</h3>
+            <address>StartCamping 營在起跑點！</address>
             <ul class="list-unstyled links">
-              <li><a href="tel://11234567890">+1(123)-456-7890</a></li>
-              <li><a href="tel://11234567890">+1(123)-456-7890</a></li>
+              <li><a href="tel://11234567890">0911222345</a></li>
+              <li><a href="tel://11234567890">@startcamping</a></li>
               <li>
-                <a href="mailto:info@mydomain.com">info@mydomain.com</a>
+                <a href="mailto:info@mydomain.com">startcamping@gmail.com</a>
               </li>
             </ul>
           </div>
           <!-- /.widget -->
         </div>
         <!-- /.col-lg-4 -->
-        <div class="col-lg-4">
+         <div class="col-lg-5">
           <div class="widget">
-            <h3>Sources</h3>
+            <h3>頁面總覽</h3>
             <ul class="list-unstyled float-start links">
-              <li><a href="#">About us</a></li>
-              <li><a href="#">Services</a></li>
-              <li><a href="#">Vision</a></li>
-              <li><a href="#">Mission</a></li>
-              <li><a href="#">Terms</a></li>
-              <li><a href="#">Privacy</a></li>
+              <li><a href="#">首頁</a></li>
+              <li><a href="#">找小鹿</a></li>
+              <li><a href="#">鹿的分享</a></li>
+              <li><a href="#">鹿的裝備</a></li>
+              <li><a href="#">廣告方案</a></li>
             </ul>
             <ul class="list-unstyled float-start links">
-              <li><a href="#">Partners</a></li>
-              <li><a href="#">Business</a></li>
-              <li><a href="#">Careers</a></li>
-              <li><a href="#">Blog</a></li>
-              <li><a href="#">FAQ</a></li>
-              <li><a href="#">Creative</a></li>
+              <li><a href="#">帳號</a></li>
+              <li><a href="#">會員帳號</a></li>
+              <li><a href="#">我的收藏</a></li>
             </ul>
           </div>
           <!-- /.widget -->
         </div>
         <!-- /.col-lg-4 -->
-        <div class="col-lg-4">
-          <div class="widget">
-            <h3>Links</h3>
-            <ul class="list-unstyled links">
-              <li><a href="#">Our Vision</a></li>
-              <li><a href="#">About us</a></li>
-              <li><a href="#">Contact us</a></li>
-            </ul>
-
-            <ul class="list-unstyled social">
-              <li>
-                <a href="#"><span class="icon-instagram"></span></a>
-              </li>
-              <li>
-                <a href="#"><span class="icon-twitter"></span></a>
-              </li>
-              <li>
-                <a href="#"><span class="icon-facebook"></span></a>
-              </li>
-              <li>
-                <a href="#"><span class="icon-linkedin"></span></a>
-              </li>
-              <li>
-                <a href="#"><span class="icon-pinterest"></span></a>
-              </li>
-              <li>
-                <a href="#"><span class="icon-dribbble"></span></a>
-              </li>
-            </ul>
-          </div>
+        <div class="col-lg-2">
           <!-- /.widget -->
         </div>
-        <!-- /.col-lg-4 -->
       </div>
       <!-- /.row -->
 
