--- a/deluxe-master/property-1.0.0/index.html
+++ b/deluxe-master/property-1.0.0/index.html
@@ -683,7 +683,7 @@
 
   <div class="section">
     <div class="row justify-content-center footer-cta" data-aos="fade-up">
-      <div class="col-lg-7 mx-auto text-center">
+      <div class="col-lg-7 mx-auto text-center mb-3">
         <h3 class="mb-4">訂閱廣告方案，提高你的營地/商品曝光率！</h3>
         <p>
           <a href="#" target="_blank" class="btn btn-primary text-white py-3 px-4">訂閱說明</a>
@@ -697,7 +697,7 @@
   <div class="section section-5 bg-light mb-0">
     <div class="container">
       <div class="row justify-content-center text-center mb-5">
-        <div class="col-lg-6 mb-5">
+        <div class="col-lg-6 mb-3 mt-3">
           <h3 class="font-weight-bold heading text-primary mb-4">
             各式廣告方案
           </h3>
