--- a/deluxe-master/property-1.0.0/index.html
+++ b/deluxe-master/property-1.0.0/index.html
@@ -79,7 +79,7 @@
               <a class="dropdown-item" href="member.php">會員帳號</a>
               <a class="dropdown-item" href="member-like.php">我的收藏</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="../login.php">登出</a>
+              <a class="dropdown-item" href="../../login.php">登出</a>
             </div>
           </li>
         </ul>
@@ -939,13 +939,6 @@
   <script src="js/counter.js"></script>
   <script src="js/custom.js"></script>
 
-  <div id="ftco-loader" class="show fullscreen">
-    <svg class="circular" width="48px" height="48px">
-      <circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" />
-      <circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10"
-        stroke="#F96D00" />
-    </svg>
-  </div>
 
 
   <script src="js/jquery.min.js"></script>
