--- a/deluxe-master/article.html
+++ b/deluxe-master/article.html
@@ -84,7 +84,7 @@
       <div class="container">
         <div class="row justify-content-center align-items-center">
           <div class="col-lg-12 text-center mt-5">
-            <h1 class="heading" data-aos="fade-up">營地資訊
+            <h1 class="heading" data-aos="fade-up">文章分享
             </h1>
 
             <nav
@@ -93,9 +93,10 @@
               data-aos-delay="200">
               <ol class="breadcrumb text-center justify-content-center">
                 <li class="breadcrumb-item"><a href="index.html">首頁</a></li>
+                <li class="breadcrumb-item"><a href="index.html">鹿的分享</a></li>
                 <li  class="breadcrumb-item active text-white-50"
                   aria-current="page" >
-                  營地
+                  文章分享
                 </li>
               </ol>
             </nav>
